feat (app) better shortcode handling and admin panel refactor

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -15,7 +15,7 @@
             </div>
         {% endif %}
 
-        <h2>Shorten your URL</h2>
+        <h2>Shorten a URL</h2>
 
         {{ form(form) }}
 
