--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,8 +1,15 @@
 <header class="sticky-top py-3 bg-black shadow text-light mb-3">
     <div class="container-xxl d-flex align-items-center justify-content-between">
-        <h1>URL Shortener</h1>
+        <a href="{{ path('homepage') }}" class="text-light text-decoration-none">
+            <h1>My URL Shortener</h1>
+        </a>
         <ul class="list-unstyled d-flex m-0 p-0">
-            <li><a href="{{ path('admin_dashboard') }}" class="btn btn-primary">Admin access</a></li>
+            {% if app.user and app.user.isAdmin %}
+            <li><a href="{{ path('app_logout') }}" class="btn btn-outline-danger me-2">Logout</a></li>
+            <li><a href="{{ path('admin_dashboard') }}" class="btn btn-primary">Admin panel</a></li>
+            {% else %}
+            <li><a href="{{ path('app_login') }}" class="btn btn-primary">Login</a></li>
+            {% endif %}
         </ul>
     </div>
 </header>
